--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nestjs-typeorm-paginate",
+  "name": "@waynechu/nestjs-typeorm-paginate",
   "author": {
     "name": "WayneChu",
     "email": "wayne.chu@simpos.com.tw",
